[package]
name = "optpy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }
env_logger = "0.9"
log = "0.4"

optpy-parser = { path = "./optpy-parser" }
optpy-resolver = { path = "./optpy-resolver" }
optpy-generator = { path = "./optpy-generator" }

[dev-dependencies]
optpy-test-macro = { path = "./optpy-test-macro" }
optpy-std = { path = "./optpy-std" }

[workspace]
members = [
    "optpy-parser",
    "optpy-resolver",
    "optpy-std",
    "optpy-generator",
    "optpy-test-macro",
]
