[package]
name = "optpy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }
env_logger = "0.9"
log = "0.4"

optpy-parser = { path = "./optpy-parser" }
optpy-resolver = { path = "./optpy-resolver" }
optpy-generator = { path = "./optpy-generator" }
optpy-runtime = { path = "./optpy-runtime" }
optpy-dump = { path = "./optpy-dump" }

[dev-dependencies]
optpy-test-macro = { path = "./optpy-test-macro" }

[workspace]
members = [
    "optpy-parser",
    "optpy-resolver",
    "optpy-runtime",
    "optpy-generator",
    "optpy-test-macro",
    "optpy-dump",
    "tools/source-code-downloader",
]
