[package]
name = "optpy-generator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
quote = "1.0.21"
optpy-parser = { path = "../optpy-parser" }
proc-macro2 = "1.0.47"

[dev-dependencies]
optpy-test-helper = { path = "../optpy-test-helper" }
optpy-resolver = { path = "../optpy-resolver" }
