[package]
name = "optpy-test-macro"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"

optpy-parser = { path = "../optpy-parser" }
optpy-resolver = { path = "../optpy-resolver" }
optpy-generator = { path = "../optpy-generator" }

[dev-dependencies]
optpy-std = { path = "../optpy-std" }
