[package]
name = "source-code-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.9.3"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["gzip"] }
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
